recursion.lessons.recursion.tree.Tree.scala.error
Tree:15: error: not found: value etape
	etape = steps + 1;
        ^Tree:21: error: not found: value etape
	tree(etape, longueur, angle, shrink);
             ^